crates/strider-analyze/tests/snapshots/arm_be__stack__main.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100d8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x10270:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "7" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "14" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x10118:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "14" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "14" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "20" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "14" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x1015c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "20" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v24" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v24" [color="#888888", style=dashed];
  "v24" -> "20" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "25" -> "20" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "26" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "20" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x102ac:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "26" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v30" [color="#888888", style=dashed];
  "v30" -> "26" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "32" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "26" -> "32" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v35" [color="#888888", style=dashed];
  "v35" -> "32" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v36" [color="#888888", style=dashed];
  "v36" -> "32" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v37" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v37" [color="#888888", style=dashed];
  "v37" -> "32" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "34" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v35" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "26" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "26" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v30" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "20" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "20" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v24" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "14" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "14" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x1fffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "47" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "15" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "7" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "13" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x1ffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x1ffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "53" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "1" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "53" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x1fffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "58" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "60" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "61" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "64" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "64" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "67" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "69" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "69" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "67" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
